fix double scrollbar bug

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -714,10 +714,8 @@ button,
   position: relative;
   display: inline-block;
   border: 0;
-  background: #35b88f;
-  color: #fff;
-  text-shadow: 0 0 0.5px rgba(255, 255, 255, 0.25);
-  cursor: pointer;
+  background: #fff;
+  color: #35b882;
   text-decoration: none;
   outline: 0;
   padding: 1em 3em 1em 3em;
@@ -727,6 +725,8 @@ button,
 
   &:hover {
     background: #45c89f;
+    color: #fff;
+    box-shadow: inset 0 0 0 1px #fff;
   }
 
   &.style1 {
@@ -950,6 +950,11 @@ button,
       border-left: solid 1px #fff;
     }
   }
+
+  img {
+    width: auto;
+    height: 100vh;
+  }
 }
 
 body.is-preload,
@@ -1019,11 +1024,6 @@ body.is-preload,
       border-left: solid 1px #fff;
     }
 
-    .button {
-      color: #35b882;
-      text-shadow: 0 0 0.5px rgba(53, 184, 130, 0.25);
-    }
-
     header {
       h2 {
         font-weight: 400;
@@ -1034,15 +1034,6 @@ body.is-preload,
 
     p {
       margin: 0;
-    }
-
-    a {
-      color: inherit;
-      border-bottom-color: rgba(255, 255, 255, 0.5);
-
-      &:hover {
-        border-bottom-color: rgba(255, 255, 255, 0);
-      }
     }
 
     footer {
