--- a/src/assets/sass/project.scss
+++ b/src/assets/sass/project.scss
@@ -12,18 +12,6 @@
   height: 100vh;
   min-height: 35em;
 
-  .more {
-    &:after {
-      content: '';
-      display: block;
-      position: absolute;
-      bottom: -9em;
-      left: 50%;
-      height: 9em;
-      border-left: solid 1px #fff;
-    }
-  }
-
   img {
     width: auto;
     height: 100vh;
@@ -153,20 +141,6 @@
 
     .inner {
       margin-right: 50%;
-    }
-  }
-}
-
-body.is-preload,
-.main-body.is-preload {
-  #project-header {
-    .more {
-      @include vendor('transform', 'translateY(8.5em)');
-      opacity: 0;
-    }
-
-    &:after {
-      opacity: 1;
     }
   }
 }
